--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "get-assemble-partial-name",
   "version": "0.0.1",
-  "description": "Get assemble partial name",
+  "description": "Get the assemble partial name",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && ./node_modules/mocha/bin/_mocha ./test.js",
